fixes whitespace to the right

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,34 +1,23 @@
 /*mobile*/
 .face-thumb {
-  height: 250px;
-  width: 250px;
+  width: 200px;
+  height: 200px;
 }
 
 .pic-box{
-  margin-left:7%;
+  width: 100%;
+  margin-left: 1%;
 }
 
-
-/*tablet*/
-@media (min-width: 600px){
+/*@media only screen and (min-width: 768px){
   .face-thumb {
-    height: 250px;
-    width: 250px;
+    width: 150px;
+    height: 150px;
+    margin-right: 30px;
+    margin-bottom: 11px;
+    float: left;
   }
-
   .pic-box{
-    margin-left:12%;
+    margin-left: 13px;
   }
-}
-
-/*desktop*/
-@media (min-width: 768px) {
-  .face-thumb {
-    height: 200px;
-    width: 200px;
-  }
-
-  .pic-box{
-    margin-left: 7%;
-  }
-}
+}*/
